@@ -8,7 +8,7 @@ import static imperative.Gender.*;
 
 public class Main {
     public static void main(String[] args) {
-        List<Person> personList = Arrays.asList(
+        List<Person> personList =List.of(
                 new Person("Jone", MALE),
                 new Person("Marina", FEMALE),
                 new Person("Aisha", FEMALE),
